<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/location"
        android:src="@drawable/location"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pg_2_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_default"
        android:text="@string/pg_2_subtitle"
        android:textColor="@color/white"/>

</LinearLayout>