<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    
    <!--Button bar-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?attr/actionBarSize"
        android:alpha="0.12"
        android:background="@color/white" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">
        <Button
            android:id="@+id/btnSkip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/skip"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/indicator0"
                android:layout_width="@dimen/indicator_size"
                android:layout_height="@dimen/indicator_size"
                android:layout_marginEnd="@dimen/view_margin_default"
                android:layout_marginRight="@dimen/view_margin_default"
                android:background="@drawable/indicator_unselected"
                android:contentDescription="@string/indicator_1"/>

            <ImageView
                android:id="@+id/indicator1"
                android:layout_width="@dimen/indicator_size"
                android:layout_height="@dimen/indicator_size"
                android:layout_marginEnd="@dimen/view_margin_default"
                android:layout_marginRight="@dimen/view_margin_default"
                android:background="@drawable/indicator_unselected"
                android:contentDescription="@string/indicator_2"/>

            <ImageView
                android:id="@+id/indicator2"
                android:layout_width="@dimen/indicator_size"
                android:layout_height="@dimen/indicator_size"
                android:background="@drawable/indicator_unselected"
                android:contentDescription="@string/indicator_3"/>
            <!-- Your other 2 indicators here -->
        </LinearLayout>
        <!-- This overlaps the next button in the last slide -->
        <Button
            android:id="@+id/btnFinish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:visibility="gone" />
        
        <ImageButton
            android:id="@+id/btnNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:contentDescription="@string/next"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_chevron_right_24dp"
            android:tint="@color/white"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>