<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.PlaceActivity"
    tools:showIn="@layout/fragment_favorite_place">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_padding_double"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inner_padding"
            android:layout_marginLeft="@dimen/inner_padding"
            android:layout_marginRight="@dimen/inner_padding"
            android:layout_marginStart="@dimen/inner_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price_range" />

            <TextView
                android:id="@+id/tvPriceRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/view_margin_default"
            android:layout_marginEnd="@dimen/inner_padding"
            android:layout_marginLeft="@dimen/inner_padding"
            android:layout_marginRight="@dimen/inner_padding"
            android:layout_marginStart="@dimen/inner_padding"
            android:layout_marginTop="@dimen/view_margin_default"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inner_padding"
            android:layout_marginLeft="@dimen/inner_padding"
            android:layout_marginRight="@dimen/inner_padding"
            android:layout_marginStart="@dimen/inner_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvBusinessInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/inner_padding"
                    android:text="@string/business_info"
                    android:textColor="@color/colorAccent" />

                <LinearLayout
                    android:id="@+id/layoutTips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/inner_padding"
                    android:layout_marginLeft="@dimen/inner_padding"
                    android:layout_marginRight="@dimen/inner_padding"
                    android:layout_marginStart="@dimen/inner_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.jcmb.shakemeup.views.TipView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.jcmb.shakemeup.views.TipView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/photo_carousel_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_padding"
                    android:contentDescription="@string/powered_by_foursquare"
                    android:src="@drawable/powered_by_foursquare" />

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>